[package]
name = "celestial"
version = "0.1.0"
authors = ["Ryan Hunt <rhunt@eqrion.net>"]
edition = "2018"
description = "Placeholder for in-progress project."
license = "Apache-2.0 WITH LLVM-exception"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
